--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     <nav id="nav">
       <ul>
         <li class="current_page_item"><a href="index.html">Главная</a></li>
-        <li><a href="/miph/">Мифология</a>
+        <li><a href="miph.html">Мифология</a>
           <ul>
             <li><a href="/miph/">Славянская</a>
               <ul>
