--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
         <li class="current_page_item"><a href="index.html">Главная</a></li>
         <li><a href="../miph.html">Мифология</a>
           <ul>
-            <li><a href="/miph/">Славянская</a>
+            <li><a href="../miph/">Славянская</a>
               <ul>
                 <li><a href="/miph/">Мифы</a></li>
                 <li><a href="/miph/">Обряды</a></li>
